--- a/package.json
+++ b/package.json
@@ -1,31 +1,32 @@
 {
-  "name": "",
-  "type": "module",
-  "version": "0.0.1",
-  "scripts": {
-    "dev": "astro dev",
-    "start": "astro dev",
-    "build": "astro check && astro build",
-    "preview": "astro preview",
-    "astro": "astro"
-  },
-  "dependencies": {
-    "@astrojs/check": "^0.4.1",
-    "@astrojs/node": "^8.0.0",
-    "@astrojs/tailwind": "^5.1.0",
-    "@tailwindcss/container-queries": "^0.1.1",
-    "astro": "^4.2.3",
-    "astro-htmx": "^1.0.5",
-    "clsx": "^2.1.0",
-    "htmx.org": "^1.9.10",
-    "nanostores": "^0.9.5",
-    "tailwind-merge": "^2.2.1",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5.3.3"
-  },
-  "devDependencies": {
-    "prettier": "^3.2.4",
-    "prettier-plugin-astro": "^0.13.0",
-    "prettier-plugin-tailwindcss": "^0.5.11"
-  }
+	"name": "landingpage",
+	"type": "module",
+	"version": "0.0.1",
+	"scripts": {
+		"dev": "astro dev",
+		"start": "astro dev",
+		"build": "astro check && astro build",
+		"preview": "astro preview",
+		"astro": "astro"
+	},
+	"dependencies": {
+		"@astrojs/alpinejs": "^0.3.2",
+		"@astrojs/check": "^0.4.1",
+		"@astrojs/node": "^8.0.0",
+		"@astrojs/tailwind": "^5.1.0",
+		"@tailwindcss/container-queries": "^0.1.1",
+		"@types/alpinejs": "^3.13.6",
+		"alpinejs": "^3.13.5",
+		"astro": "^4.2.3",
+		"astro-htmx": "^1.0.5",
+		"htmx.org": "^1.9.10",
+		"tailwind-merge": "^2.2.1",
+		"tailwindcss": "^3.4.1",
+		"typescript": "^5.3.3"
+	},
+	"devDependencies": {
+		"prettier": "^3.2.4",
+		"prettier-plugin-astro": "^0.13.0",
+		"prettier-plugin-tailwindcss": "^0.5.11"
+	}
 }
